[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/DF1/Interactive/Lava/LavaParticleShader.tres" type="Material" id=1]
[ext_resource path="res://World/DF1/Interactive/Lava/Lava.gd" type="Script" id=2]
[ext_resource path="res://Common/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 0.666667, 0, 1, 0, 0, 0, 1 )

[node name="LavaCollider" type="Area2D"]
script = ExtResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = ExtResource( 1 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
gravity = Vector2( 0, 0 )
angle = 360.0
angle_random = 1.0
scale_amount = 2.0
color_ramp = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 4
damage = 2

[node name="LavaShape" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Lava_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Lava_body_exited"]

[editable path="Hitbox"]
